--- a/packages/renderer/assets/css/index.scss
+++ b/packages/renderer/assets/css/index.scss
@@ -2,3 +2,22 @@
 
 $OcrSubNavWidth: 10rem;
 $OcrTopBarHeight: 4rem;
+
+// scroll bar beautification
+// from https://juejin.cn/post/6844903613936959496
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 3px;
+  background: rgba(0, 0, 0, 0.06);
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.08);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background: rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+}
